//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table usuario {
  id Int [pk, increment]
  nombre String [not null]
  apellidos String [not null]
  correo String [unique, not null]
  dni Int [not null]
  password String [not null]
  fecha_nac DateTime [default: `now()`, not null]
  estado String [not null]
  reporte reporte [not null]
  insignia String [not null]
  es_moderador Boolean [not null, default: false]
}

Table reporte {
  id Int [pk, increment]
  user_id Int [not null]
  evidencia_imagen String
  animal_nombre String [not null]
  descripcion String [not null]
  latitud Float [not null]
  longitud Float [not null]
  nombre_reportante String
  fecha_creacion DateTime [default: `now()`, not null]
  estado String [not null]
  reporte_detallado String
  usuario usuario [not null]
}

Table moderador {
  id Int [pk, increment]
  nombre String [not null]
  apellidos String [not null]
  correo String [unique, not null]
  password String [not null]
  evento evento [not null]
}

Table evento {
  id Int [pk, increment]
  mod_id Int [not null]
  moderador moderador [not null]
  nombre String [not null]
  descripcion String [not null]
  imagen Bytes [not null]
  fecha DateTime [not null]
  ubicacion String [not null]
  categoria String [not null]
}

Ref: reporte.user_id > usuario.id

Ref: evento.mod_id > moderador.id